BONUS: Aggiunta hover submenu e ombra menu drop

--- a/BONUS/index.html
+++ b/BONUS/index.html
@@ -28,7 +28,7 @@
                     <li class="nav-item dropdown position-static">
                         <a class="nav-link my__dropdown-toggle active my_hover_blue" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Giochi <i class="fas fa-chevron-down"></i></a>
-                        <ul class="dropdown-menu border-0 w-100 p-4 my_top_drop" aria-labelledby="navbarDropdown">
+                        <ul class="dropdown-menu border-0 w-100 p-4 my_top_drop my_drop_shadow" aria-labelledby="navbarDropdown">
                             <li><div class="container-fluid">
                                 <div class="row d-flex justify-content-center">
                                     <div class="col-1 d-flex flex-column align-items-center my_submenu_hover">
@@ -75,22 +75,22 @@
                     <li class="nav-item dropdown position-static">
                         <a class="nav-link my__dropdown-toggle active my_hover_blue" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Hardware <i class="fas fa-chevron-down"></i></a>
-                        <ul class="dropdown-menu border-0 w-100 p-4 my_top_drop" aria-labelledby="navbarDropdown">
+                        <ul class="dropdown-menu border-0 w-100 p-4 my_top_drop my_drop_shadow" aria-labelledby="navbarDropdown">
                             <li><div class="container-fluid">
                                 <div class="row d-flex justify-content-center">
-                                    <div class="col-1 d-flex flex-column align-items-center">
+                                    <div class="col-1 d-flex flex-column align-items-center my_submenu_hover">
                                         <img class="w-50" src="img/play-menu-ico.png" alt="ps5 icon image">
                                         <p class="fs-5 fw-light">PS5</p>
                                     </div>
-                                    <div class="col-1 d-flex flex-column align-items-center">
+                                    <div class="col-1 d-flex flex-column align-items-center my_submenu_hover">
                                         <img class="w-50" src="img/ps4.png" alt="ps4 icon image">
                                         <p class="fs-5 fw-light">PS4</p>
                                     </div>
-                                    <div class="col-1 d-flex flex-column align-items-center">
+                                    <div class="col-1 d-flex flex-column align-items-center my_submenu_hover">
                                         <img class="w-50" src="img/ps4pro.png" alt="ps4 Pro icon image">
                                         <p class="fs-5 fw-light">PS4 Pro</p>
                                     </div>
-                                    <div class="col-1 d-flex flex-column align-items-center">
+                                    <div class="col-1 d-flex flex-column align-items-center my_submenu_hover">
                                         <img class="w-50" src="img/psvr.png" alt="ps VR icon image">
                                         <p class="fs-5 fw-light">PS VR</p>
                                     </div>
@@ -113,18 +113,18 @@
                     <li class="nav-item dropdown position-static">
                         <a class="nav-link my__dropdown-toggle active my_hover_blue" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Servizi <i class="fas fa-chevron-down"></i></a>
-                        <ul class="dropdown-menu border-0 w-100 p-4 my_top_drop" aria-labelledby="navbarDropdown">
+                        <ul class="dropdown-menu border-0 w-100 p-4 my_top_drop my_drop_shadow" aria-labelledby="navbarDropdown">
                             <li><div class="container-fluid">
                                 <div class="row d-flex justify-content-center">
-                                    <div class="col-1 d-flex flex-column align-items-center">
+                                    <div class="col-1 d-flex flex-column align-items-center my_submenu_hover">
                                         <img class="w-50" src="img/psplus.png" alt="ps plus icon image">
                                         <p class="fs-5 fw-light">PS Plus</p>
                                     </div>
-                                    <div class="col-1 d-flex flex-column align-items-center">
+                                    <div class="col-1 d-flex flex-column align-items-center my_submenu_hover">
                                         <img class="w-50" src="img/psnow.png" alt="ps now icon image">
                                         <p class="fs-5 fw-light">PS Now</p>
                                     </div>
-                                    <div class="col-1 d-flex flex-column align-items-center">
+                                    <div class="col-1 d-flex flex-column align-items-center my_submenu_hover">
                                         <img class="w-50" src="img/psvideo.png" alt="ps video icon image">
                                         <p class="fs-5 fw-light">PS Video</p>
                                     </div>
@@ -135,10 +135,10 @@
                     <li class="nav-item dropdown position-static">
                         <a class="nav-link my__dropdown-toggle active my_hover_blue" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Novità <i class="fas fa-chevron-down"></i></a>
-                        <ul class="dropdown-menu border-0 w-100 p-4 my_top_drop" aria-labelledby="navbarDropdown">
+                        <ul class="dropdown-menu border-0 w-100 p-4 my_top_drop my_drop_shadow" aria-labelledby="navbarDropdown">
                             <li><div class="container-fluid">
                                 <div class="row d-flex justify-content-center">
-                                    <div class="col-1 d-flex flex-column align-items-center">
+                                    <div class="col-1 d-flex flex-column align-items-center my_submenu_hover">
                                         <img class="w-50" src="img/psblog.png" alt="ps blog icon image">
                                         <p class="fs-5 fw-light">PS Blog</p>
                                 </div>
@@ -158,10 +158,10 @@
                     <li class="nav-item dropdown position-static">
                         <a class="nav-link my__dropdown-toggle active my_hover_blue" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Fai acquisti <i class="fas fa-chevron-down"></i></a>
-                        <ul class="dropdown-menu border-0 w-100 p-4 my_top_drop" aria-labelledby="navbarDropdown">
+                        <ul class="dropdown-menu border-0 w-100 p-4 my_top_drop my_drop_shadow" aria-labelledby="navbarDropdown">
                             <li><div class="container-fluid">
                                 <div class="row d-flex justify-content-center">
-                                    <div class="col-1 d-flex flex-column align-items-center">
+                                    <div class="col-1 d-flex flex-column align-items-center my_submenu_hover">
                                         <img class="w-50" src="img/psstore.png" alt="ps store icon image">
                                         <p class="fs-5 fw-light">PS Store</p>
                                     </div>
@@ -185,14 +185,14 @@
                     <li class="nav-item dropdown position-static">
                         <a class="nav-link my__dropdown-toggle active my_hover_blue" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Supporto <i class="fas fa-chevron-down"></i></a>
-                        <ul class="dropdown-menu border-0 w-100 p-4 my_top_drop" aria-labelledby="navbarDropdown">
+                        <ul class="dropdown-menu border-0 w-100 p-4 my_top_drop my_drop_shadow" aria-labelledby="navbarDropdown">
                             <li><div class="container-fluid">
                                 <div class="row d-flex justify-content-center">
-                                    <div class="col-1 d-flex flex-column align-items-center">
+                                    <div class="col-1 d-flex flex-column align-items-center my_submenu_hover">
                                         <img class="w-50" src="img/support.png" alt="support icon image">
                                         <p class="fs-5 fw-light">Supporto</p>
                                     </div>
-                                    <div class="col-1 d-flex flex-column align-items-center">
+                                    <div class="col-1 d-flex flex-column align-items-center my_submenu_hover">
                                         <img class="w-50" src="img/psicon.png" alt="ps icon image">
                                         <p class="fs-5 fw-light">Stato del PSN</p>
                                     </div>
@@ -207,14 +207,14 @@
                         <li class="nav-item dropdown position-static">
                             <a class="nav-link my__dropdown-toggle active my_hover_blue me-3" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 My PlayStation <i class="fas fa-chevron-down"></i></a>
-                            <ul class="dropdown-menu border-0 w-100 p-4 my_top_drop" aria-labelledby="navbarDropdown">
+                            <ul class="dropdown-menu border-0 w-100 p-4 my_top_drop my_drop_shadow" aria-labelledby="navbarDropdown">
                                 <li><div class="container-fluid">
                                     <div class="row d-flex justify-content-center">
-                                        <div class="col-1 d-flex flex-column align-items-center">
+                                        <div class="col-1 d-flex flex-column align-items-center my_submenu_hover">
                                             <img class="w-50" src="img/user.png" alt="user icon image">
                                             <p class="fs-5 fw-light">Profilo</p>
                                         </div>
-                                        <div class="col-1 d-flex flex-column align-items-center">
+                                        <div class="col-1 d-flex flex-column align-items-center my_submenu_hover">
                                             <img class="w-50" src="img/pswallet.png" alt="ps wallet icon image">
                                             <p class="fs-5 fw-light">PS Wallet</p>
                                     </div>
